--- a/iron-pulse-rect/package.json
+++ b/iron-pulse-rect/package.json
@@ -13,7 +13,9 @@
         "@types/node": "^16.11.14",
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.11",
+        "axios": "^1.4.0",
         "bootstrap": "^5.3.0",
+        "qs": "^6.11.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.2.1",
