--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.0",
+    "cors": "^2.8.5",
     "daisyui": "^3.0.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
