--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.3.0",
     "connect-pg-simple": "^9.0.0",
     "daisyui": "^3.0.0",
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "pg": "^8.11.0",
