--- a/iron-pulse-rect/package.json
+++ b/iron-pulse-rect/package.json
@@ -16,10 +16,14 @@
     "@types/react-dom": "^18.0.11",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "express-session": "^1.17.3",
     "prettier": "^2.8.8",
     "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.1",
     "reactstrap": "^9.1.10",
